<resources>
    <string name="app_name">RunningEvents</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="e_mail">E-mail</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="email_not_valid">E-mail address is not valid</string>
    <string name="password_to_short">Password is too short</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="race_name">Race Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="website">Website</string>
    <string name="nearby">Nearby</string>
    <string name="sort">Sort</string>
    <string name="all">All</string>
    <string name="five_km">5km</string>
    <string name="ten_km">10km</string>
    <string name="half_marathon">Half-Marathon</string>
    <string name="marathon">Marathon</string>
    <string name="races_distance">Races distance</string>
    <string name="races">Races</string>
    <string name="saved">Saved</string>
    <string name="remove_race">Remove Race</string>
    <string name="remove_race_message">"Are you sure you want to remove the selected race from your saved races list?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="password_helper_message">Between 8 and 30 characters and must contain at least one special character</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="enter_name">Enter name</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="language">Language</string>
    <string name="logout">Log out</string>
    <string name="english">English</string>
    <string name="macedonian">Macedonian</string>
    <string name="settings">Settings</string>
    <string name="select_category">Select category</string>
    <string name="filters">Filters</string>
    <string name="myraces">My Races</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="facebook_app_id">155470959911167</string>
    <string name="fb_login_protocol_scheme">fb155470959911167</string>
</resources>